# vibe

./: .gitignore  README.md
html_project_v1/: index.html  manifest.json  script.js  service-worker.js  style.css
html_project_v1/.claude/: settings.local.json
html_project_v1/data/: basic.json  collections.json  database.json  designpattern.json  exception.json  jvm.json  network.json  oop.json  spring.json  thread.json
python_project_v1/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  airflow_requirements.txt  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
python_project_v1/.claude/: settings.local.json
python_project_v1/airflow/: Dockerfile  README.md  docker-compose.yml
python_project_v1/airflow/config/: airflow.cfg
python_project_v1/airflow/dags/: large_data_etl_pipeline.py  monitoring_dag.py
python_project_v1/airflow/monitoring/: prometheus.yml
python_project_v1/airflow/nginx/: nginx.conf
python_project_v1/airflow/scripts/: start.sh  stop.sh
python_project_v1/airflow/utils/: data_processor.py  monitoring.py  retry_handler.py
python_project_v1/alembic/: env.py
python_project_v1/app/: main.py
python_project_v1/app/api/v1/: router.py
python_project_v1/app/api/v1/endpoints/: auth.py  health.py  users.py
python_project_v1/app/auth/: __init__.py  jwt.py  security.py
python_project_v1/app/core/: config.py
python_project_v1/app/database/: database.py
python_project_v1/app/middleware/: logging.py  metrics.py  rate_limit.py
python_project_v1/app/models/: __init__.py  base.py  user.py
python_project_v1/app/schemas/: __init__.py  common.py  user.py
python_project_v1/app/services/: monitoring.py
python_project_v1/app/utils/: logging.py
python_project_v1/monitoring/: prometheus.yml
python_project_v1/notebooks/: fastapi_random_key.ipynb  fastapi_testing.ipynb  generate_secret_key.ipynb
python_project_v1/src/: __init__.py  main.py
python_project_v1/tests/: test_main.py
react_project_v1/: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.app.json
react_project_v1/.storybook/: main.ts
react_project_v1/src/: App.tsx  main.tsx
react_project_v1/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
react_project_v1/src/components/ui/: Avatar.test.tsx  Avatar.tsx  BulkActions.tsx  Button.tsx  DataTable.stories.tsx  DataTable.tsx  FormField.tsx  Input.tsx  MultiStepForm.stories.tsx  MultiStepForm.tsx  Pagination.tsx  StepNavigation.tsx  Textarea.tsx  UserProfile.stories.tsx  UserProfile.test.tsx  UserProfile.tsx  index.ts
react_project_v1/src/hooks/: useAutoSave.ts  useKeyboardNavigation.ts  useMultiStepForm.ts  useVirtualization.ts
react_project_v1/src/services/: api.ts
react_project_v1/src/stories/: Configure.mdx
react_project_v1/src/types/: dataTable.ts  index.ts  multiStepForm.ts
react_project_v1/src/utils/: dataTableUtils.ts  formValidation.ts  index.ts
(+4 files in other folders)
